--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="navbar">
         <div class="container">
             <div class="logo">
-                <img src="" alt="Resturent Logo" class="img-responsiv">
+                <img src="Images/logo.png" alt="Resturent Logo" class="img-responsiv">
             </div>
 
             <div class="menu text-right">
@@ -31,14 +31,17 @@
                     </li>
                 </ul>
             </div>
+            <div class="clear-fix">
+
+            </div>
         </div>
     </section>
 
-    <section class="food-search">
+    <section class="food-search text-center">
         <div class="container">
             <form action="">
                 <input type="search" name="search" placeholder="Search for food....">
-                <input type="submit" name="submit"  value="Submit">
+                <input type="submit" name="submit"  value="Submit" class="btn">
             </form>
 
         </div>
