Enhance styling and layout for food menu and categories sections

--- a/index.html
+++ b/index.html
@@ -1,111 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant Website</title>
 
-    <link rel="stylesheet"  href="CSS/style.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="CSS/style.css" />
+  </head>
+  <body>
     <section class="navbar">
-        <div class="container">
-            <div class="logo">
-                <img src="Images/logo.png" alt="Resturent Logo" class="img-responsiv">
-            </div>
-
-            <div class="menu text-right">
-                <ul>
-                    <li>
-                        <a href="">Home</a>
-                    </li>
-                    <li>
-                        <a href="">About</a>
-                    </li>
-                    <li>
-                        <a href="">Foods</a>
-                    </li>
-                    <li>
-                        <a href="">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="clear-fix">
-
-            </div>
+      <div class="container">
+        <div class="logo">
+          <img
+            src="Images/logo.png"
+            alt="Resturent Logo"
+            class="img-responsiv"
+          />
         </div>
+
+        <div class="menu text-right">
+          <ul>
+            <li>
+              <a href="">Home</a>
+            </li>
+            <li>
+              <a href="">About</a>
+            </li>
+            <li>
+              <a href="">Foods</a>
+            </li>
+            <li>
+              <a href="">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="clear-fix"></div>
+      </div>
     </section>
 
     <section class="food-search text-center">
-        <div class="container">
-            <form action="">
-                <input type="search" name="search" placeholder="Search for food....">
-                <input type="submit" name="submit"  value="Submit" class="btn">
-            </form>
-
-        </div>
+      <div class="container">
+        <form action="">
+          <input
+            type="search"
+            name="search"
+            placeholder="Search for food...."
+          />
+          <input
+            type="submit"
+            name="submit"
+            value="Submit"
+            class="btn btn-primary"
+          />
+        </form>
+      </div>
     </section>
-
 
     <section class="categories">
-        <div class="container">
-            <h2>Categories</h2>
+      <div class="container">
+        <h2 class="text-center">Categories</h2>
 
-            <diV class="box-3">
-                box1
-            </diV>
-            <diV class="box-3">
-                box1
-            </diV>
-            <diV class="box-3">
-                box1
-            </diV>
+        <div class="box-3 float-container">
+          <img
+            src="Images/pizza.jpg"
+            alt="Pizza"
+            class="img-responsiv img-curve"
+          />
+          <h3 class="float-text text-white">Pizza</h3>
         </div>
+        <div class="box-3 float-container">
+          <img
+            src="Images/burger.jpg"
+            alt="burger"
+            class="img-responsiv img-curve"
+          />
+          <h3 class="float-text text-white">Burger</h3>
+        </div>
+        <div class="box-3 float-container">
+          <img
+            src="Images/momo.jpg"
+            alt="momo"
+            class="img-responsiv img-curve"
+          />
+          <h3 class="float-text text-white">Momo</h3>
+        </div>
+
+        <div class="clear-fix"></div>
+      </div>
     </section>
 
-
     <section class="food-menu">
-        <div class="container">
-            <h1>Explore Food</h1>
+      <div class="container">
+        <h2 class="text-center">Explore Food</h2>
 
-            <div class="food-menu">
-                Food Menu 1
-            </div>
-            
-            <div class="food-menu">
-                Food Menu 2
-            </div>
-            <div class="food-menu">
-                Food Menu 3
-            </div>
-            <div class="food-menu">
-                Food Menu 4
-            </div>
+        <div class="food-menu-box">
+          <div class="food-menu-img">
+            <img
+              src="Images/menu-pizza.jpg"
+              alt="Chicke Hawain Pizza"
+              class="img-responsiv img-curve"
+            />
+          </div>
 
+          <div class="food-menu-desc">
+            <h4>Foot Title</h4>
+            <p class="food-price">$2.3</p>
+            <p class="food-desc">
+              Made with Italian Sauce, Chicken, and organic vegetables.
+            </p>
+            <br />
+            <a href="#" class="btn btn-primary">Order Now</a>
+          </div>
+
+          <div class="clear-fix"></div>
         </div>
+        <div class="food-menu-box">
+          <div class="food-menu-img">
+            <img
+              src="Images/menu-pizza.jpg"
+              alt="Chicke Hawain Pizza"
+              class="img-responsiv img-curve"
+            />
+          </div>
+
+          <div class="food-menu-desc">
+            <h4>Foot Title</h4>
+            <p class="food-price">$2.3</p>
+            <p class="food-desc">
+              Made with Italian Sauce, Chicken, and organic vegetables.
+            </p>
+            <br />
+            <a href="#" class="btn btn-primary">Order Now</a>
+          </div>
+
+          <div class="clear-fix"></div>
+        </div>
+        <div class="food-menu-box">
+          <div class="food-menu-img">
+            <img
+              src="Images/menu-pizza.jpg"
+              alt="Chicke Hawain Pizza"
+              class="img-responsiv img-curve"
+            />
+          </div>
+
+          <div class="food-menu-desc">
+            <h4>Foot Title</h4>
+            <p class="food-price">$2.3</p>
+            <p class="food-desc">
+              Made with Italian Sauce, Chicken, and organic vegetables.
+            </p>
+            <br />
+            <a href="#" class="btn btn-primary">Order Now</a>
+          </div>
+
+          <div class="clear-fix"></div>
+        </div>
+        <div class="food-menu-box">
+          <div class="food-menu-img">
+            <img
+              src="Images/menu-pizza.jpg"
+              alt="Chicke Hawain Pizza"
+              class="img-responsiv img-curve"
+            />
+          </div>
+
+          <div class="food-menu-desc">
+            <h4>Foot Title</h4>
+            <p class="food-price">$2.3</p>
+            <p class="food-desc">
+              Made with Italian Sauce, Chicken, and organic vegetables.
+            </p>
+            <br />
+            <a href="#" class="btn btn-primary">Order Now</a>
+          </div>
+
+          <div class="clear-fix"></div>
+        </div>
+
+        <div class="clear-fix"></div>
+      </div>
     </section>
 
     <section class="social">
-        <div class="container">
-            <ul>
-               <li>
-                <a href="">Facebool</a>
-               </li>
-               <li>
-                <a href="">Instragram</a>
-               </li>
-               <li>
-                <a href="">X</a>
-               </li>
-            </ul>
-        </div>
+      <div class="container">
+        <ul>
+          <li>
+            <a href="">Facebool</a>
+          </li>
+          <li>
+            <a href="">Instragram</a>
+          </li>
+          <li>
+            <a href="">X</a>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <section class="footer">
-        <div class="container">
-            <p>All right reserved. Designed By <a href="">Dinod Deshanajna</a></p>
-        </div>
+      <div class="container">
+        <p>All right reserved. Designed By <a href="">Dinod Deshanajna</a></p>
+      </div>
     </section>
-</body>
+  </body>
 </html>
