Update food menu items and images; add social section styling

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </div>
 
           <div class="food-menu-desc">
-            <h4>Foot Title</h4>
+            <h4>Pizza</h4>
             <p class="food-price">$2.3</p>
             <p class="food-desc">
               Made with Italian Sauce, Chicken, and organic vegetables.
@@ -117,14 +117,14 @@
         <div class="food-menu-box">
           <div class="food-menu-img">
             <img
-              src="Images/menu-pizza.jpg"
+              src="Images/menu-burger.jpg"
               alt="Chicke Hawain Pizza"
               class="img-responsiv img-curve"
             />
           </div>
 
           <div class="food-menu-desc">
-            <h4>Foot Title</h4>
+            <h4>Burger</h4>
             <p class="food-price">$2.3</p>
             <p class="food-desc">
               Made with Italian Sauce, Chicken, and organic vegetables.
@@ -138,14 +138,14 @@
         <div class="food-menu-box">
           <div class="food-menu-img">
             <img
-              src="Images/menu-pizza.jpg"
+              src="Images/menu-burger.jpg"
               alt="Chicke Hawain Pizza"
               class="img-responsiv img-curve"
             />
           </div>
 
           <div class="food-menu-desc">
-            <h4>Foot Title</h4>
+            <h4>Nice Burger</h4>
             <p class="food-price">$2.3</p>
             <p class="food-desc">
               Made with Italian Sauce, Chicken, and organic vegetables.
@@ -159,14 +159,14 @@
         <div class="food-menu-box">
           <div class="food-menu-img">
             <img
-              src="Images/menu-pizza.jpg"
+              src="Images/menu-momo.jpg"
               alt="Chicke Hawain Pizza"
               class="img-responsiv img-curve"
             />
           </div>
 
           <div class="food-menu-desc">
-            <h4>Foot Title</h4>
+            <h4>Momo</h4>
             <p class="food-price">$2.3</p>
             <p class="food-desc">
               Made with Italian Sauce, Chicken, and organic vegetables.
@@ -183,7 +183,7 @@
     </section>
 
     <section class="social">
-      <div class="container">
+      <div class="container text-center">
         <ul>
           <li>
             <a href="">Facebool</a>
