--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     </section>
 
     <section class="footer">
-      <div class="container">
+      <div class="container text-center">
         <p>All right reserved. Designed By <a href="">Dinod Deshanajna</a></p>
       </div>
     </section>
